--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
-  "name": "redoq",
+  "name": "project_tutor_meet",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "mocha  test"
-  },
+  "main": "index.js",
   "dependencies": {
     "bluebird": "^3.7.2",
-    "crypto-js": "^4.1.1",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mysql2": "^2.3.0",
-    "node": "^16.6.1",
-    "nodemon": "^2.0.12",
-    "url": "^0.11.0"
+    "mysql2": "^2.3.3",
+    "node": "^17.0.1",
+    "nodemon": "^2.0.14"
   },
-  "devDependencies": {
-    "chai": "^4.3.4",
-    "chai-http": "^4.3.0",
-    "mocha": "^9.1.1"
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Md Ayyan Fahim",
+  "repository": {
+    "type": "git",
+    "url": "\u0016https://github.com/mdayyan011/Project_Tutor_Meet.git"
+  },
+  "author": "",
   "license": "ISC"
 }
